k3s/mr/server/script/ic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ic-deployment
  labels:
    app: ic
spec:
  replicas: 2  # Number of replicas
  selector:
    matchLabels:
      app: ic
  template:
    metadata:
      labels:
        app: ic
    spec:
      nodeSelector:
        nodegroup: middleware  # Ensure pods run on nodes labeled with "nodegroup=middleware"
      tolerations:
      - key: "node-role.kubernetes.io/worker"
        operator: "Equal"
        value: "true"
        effect: "NoExecute"  # Update to NoExecute to match the taint on the node
      containers:
      - name: ic
        image: 192.168.1.168:5000/beacon:01oct2024B
        ports:
        - containerPort: 20000
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            cpu: "4"
            memory: "3Gi"
        volumeMounts:
        - name: hosts-volume
          mountPath: /etc
      volumes:
      - name: hosts-volume
        emptyDir: {}  # Use an empty directory as a volume
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: ic-service
spec:
  type: NodePort
  selector:
    app: ic
  ports:
    - protocol: TCP
      port: 20000        # Internal port of the service
      targetPort: 20000   # Container's port
      nodePort: 32000     # External port on the node

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ic-network-policy
spec:
  podSelector:
    matchLabels:
      app: ic
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: {}  # Allow traffic from all namespaces, adjust based on security needs
    ports:
    - protocol: TCP
      port: 20000
